Add discogs_cache.js script to index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <div id="modal-details"></div>
         </div>
     </div>
+    <script src="discogs_cache.js"></script>
+    
     <script src="script.js"></script>
 </body>
 </html>
