--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         </div>
     </div>
 
-    <script src="discogs_cache.js"></script>
+    <script>
+        var discogsCache = {};
+    </script>
     
     <script src="script.js"></script>
 </body>
